# spm

./: .gitignore  .gitlab-ci-filelist.sh  .gitlab-ci.yml  CMakeLists.txt  CTestConfig.cmake  ChangeLog.md  ChangeLog.org  README.md  SPMConfig.cmake.in  test.py  toto.c
.gitlab/: build.sh  build.yml  build_linux.sh  build_macosx.sh  check_ci.sh  ci-test-initial-cache.cmake  common.yml  coverage.yml  coverity.yml  env.sh  pages.yml  sonarqube.yml  test.sh  test.yml  test_linux.sh  test_macosx.sh  validate.sh  validate.yml
.gitlab/check_link/: CMakeLists.txt  link_cmake.sh  link_pkgconfig.sh
cmake_modules/: CheckSystem.cmake  GenSPMPkgConfig.cmake  SPMConfig.cmake.in  local_subs.py
docs/: CMakeLists.txt
docs/doxygen/: Doxyfile.in  Doxyfile.in.bak  groups.dox
examples/: CMakeLists.txt  Makefile.in  example_drivers.c  example_lap1.c  example_lap2.c  example_mdof1.c  example_mdof2.c
include/: spm.h  spm_config.h.in  spm_const.h  spm_datatypes.h
include/spm/: config.h.in  const.h  datatypes.h  mpi.h  p_spm.h  z_spm.h
lib/pkgconfig/: spm.pc.in
src/: CMakeLists.txt  common.h  frobeniusupdate.h  integer_sort.c  integer_sort_mtypes.c  spm.c  spm_degree.c  spm_dof_extend.c  spm_drivers.h  spm_gather.c  spm_gen_fake_values.c  spm_integers.c  spm_io.c  spm_nompi.c  spm_read_driver.c  spm_redistribute.c  spm_rhs.c  spm_scatter.c  spm_symmetrize.c  spm_update_compute_fields.c  z_spm.c  z_spm.h  z_spm_2dense.c  z_spm_convert_to_csc.c  z_spm_convert_to_csr.c  z_spm_convert_to_ijv.c  z_spm_dof_extend.c  z_spm_expand.c  z_spm_gather_rhs.c  z_spm_gen_mat.c  z_spm_genmat.c  z_spm_genrhs.c  z_spm_integer.c  z_spm_laplacian.c  z_spm_matrixvector.c  z_spm_mergeduplicate.c  z_spm_norm.c  z_spm_print.c  z_spm_reduce_rhs.c  z_spm_rhs.c  (+2 more)
src/drivers/: iohb.c  iohb.h  laplacian.c  laplacian.h  mmio.c  mmio.h  readhb.c  readijv.c  readmm.c  readrsa.c  skitf.f
tests/: CMakeLists.txt  core_zgeadd.c  core_zplrnt.c  get_options.c  p_spm_tests.c  spm_check_and_correct_tests.c  spm_compare.c  spm_convert_tests.c  spm_dist_check_and_correct_tests.c  spm_dist_convert_tests.c  spm_dist_expand_tests.c  spm_dist_genrhs_tests.c  spm_dist_matvec_tests.c  spm_dist_norm_tests.c  spm_dist_sort_tests.c  spm_dof_expand_tests.c  spm_dof_matvec_tests.c  spm_dof_norm_tests.c  spm_dof_sort_tests.c  spm_expand_tests.c  spm_matvec_tests.c  spm_norm_tests.c  spm_redistribute_tests.c  spm_scatter_gather_tests.c  spm_sort_tests.c  spm_test_compare.c  spm_test_utils.c  spm_tests.h  validate_convert.sh  validate_expand.sh  z_spm_sort_tests.c  z_spm_tests.c
tools/: analysis.sh  check_authors.sh  check_header.sh  coverage.sh  filelist.sh  find_sources.sh  gen_wrappers.py  release.sh  spm.pc.in  spm_env.sh.in  spmf.pc.in  update_release.sh
tools/wrappers/: __init__.py  spm_fortran.py  spm_julia.py  spm_python.py  wrap_fortran.py  wrap_julia.py  wrap_python.py
wrappers/: CMakeLists.txt
wrappers/fortran90/: CMakeLists.txt
wrappers/fortran90/examples/: spm_driver.F90  spm_driver.f90  spm_user.F90  spm_user.f90  spmf_driver.F90  spmf_rebalance.F90  spmf_user.F90
wrappers/fortran90/src/: spm_enums.F90  spm_f2c.c  spmf.f90  spmf_bindings.f90  spmf_enums.F90  spmf_functions.f90  spmf_interfaces.f90
wrappers/julia/: CMakeLists.txt  spm_driver.jl  spm_user.jl
wrappers/julia/spm/: Manifest.mpi.toml  Manifest.shm.toml  Project.mpi.toml  Project.shm.toml
wrappers/julia/spm/src/: spm.jl  spm_enums.jl.in
wrappers/python/: CMakeLists.txt  spm_driver.py  spm_scipy.py
wrappers/python/spm/: __init__.py  __spm__.py  enum.py.in  spm.py
